Fix footer bottom alignment

--- a/services/web/app/components/footer.css
+++ b/services/web/app/components/footer.css
@@ -80,7 +80,7 @@
         &.right {
           flex-grow: 1;
           display: flex;
-          align-items: flex-end;
+          align-items: center;
           justify-content: flex-end;
           font-size: var(--text-size-md);
           font-weight: var(--text-weight-regular);
